# tezos-mcp

./: .env.example  .gitignore  INSTALL_WINDOWS.md  LICENSE  QUICKSTART.md  README.md  SOURCES.md  examples.md  pyproject.toml  security.py  server.py  server_readonly.py
.claude/skills/tezos/: SKILL.md
