[project]
name = "tezos-mcp-server"
version = "0.1.0"
description = "MCP server for Tezos blockchain interactions"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pytezos>=3.11.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
